# LITEXCNC-HUB75HAT

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
components/AliExpress/footprint/: CONN-TH_3P-P5.08_KF142V-5.08-3P.kicad_mod  CONN-TH_8P-P5.08_KF142V-5.08-8P.kicad_mod  CONN-TH_P5.08_KF142V-5.08-2P.kicad_mod
components/AliExpress/symbol/: AliExpressSymbols.kicad_sym
docs/: Makefile  make.bat
docs/src/: 5a-75b.rst  changelog.rst  conf.py  connectors.rst  index.rst  license.rst  rpi.rst  status_LEDs.rst
docs/src/daughter_boards/: index.rst
docs/src/tables/: IO1.csv  IO2.csv  IO3.csv
src/BOB4AXIS/KICAD/: BOB4AXIS.kicad_pcb  BOB4AXIS.kicad_prl  BOB4AXIS.kicad_sch
src/BOB4ENCODER/KICAD/: BOB4ENCODER.kicad_pcb  BOB4ENCODER.kicad_prl  BOB4ENCODER.kicad_sch
src/HC245T_BYPASS/: README.md
src/HC245T_BYPASS/KICAD/: hc245t-bypass-panel-test.kicad_pcb  hc245t-bypass-panel-test.kicad_prl  hc245t-bypass-panel-test.kicad_pro  hc245t-bypass-panel.kicad_pcb  hc245t-bypass-panel.kicad_prl  hc245t-bypass-panel.kicad_pro
src/HUB75HAT/: CHANGELOG.rst
src/HUB75HAT/KICAD/: Custom_components.kicad_sym  HUB75HAT.kicad_pcb  HUB75HAT.kicad_prl  HUB75HAT.kicad_pro  HUB75HAT.kicad_sch  LITEXCNC-HUB75HAT-backup.kicad_pcb  LITEXCNC-HUB75HAT.kicad_pcb  LITEXCNC-HUB75HAT.kicad_prl  LITEXCNC-HUB75HAT.kicad_sch  sym-lib-table  ~LITEXCNC-HUB75HAT.kicad_pcb.lck
src/LITEXCNC-HUB75HAT/: LITEXCNC-HUB75HAT.kicad_pcb  LITEXCNC-HUB75HAT.kicad_prl  LITEXCNC-HUB75HAT.kicad_pro  LITEXCNC-HUB75HAT.kicad_sch
src/components/: README.md
(+136 files in other folders)
